# askMyDocs

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
data/processed/: failed_downloads.json  stripe_links.json
docs/: ingestion_notes.md
src/: config.py
src/ingest/: download_docs.py  fetch_links.py  models.py
tests/: test_fetch_links.py
